src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <label>Team Member</label>
        <referenceTo>Team_Member__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Sheet__c</fullName>
        <label>Time Sheet</label>
        <referenceTo>Time_Sheet__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>IF(LEN(TEXT(FLOOR( Minutes__c / 60))) &gt; 1,TEXT(FLOOR( Minutes__c / 60)),&quot;0&quot;&amp;TEXT(FLOOR( Minutes__c / 60)))&amp;&quot;:&quot;&amp;IF(LEN(TEXT(MOD( Minutes__c ,60))) &gt; 1,TEXT(MOD( Minutes__c ,60)),&quot;0&quot;&amp;TEXT(MOD( Minutes__c ,60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timer_Start_Date_Time__c</fullName>
        <label>Timer Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timer_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timer Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Billing_Price__c</fullName>
        <label>Total Billing Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TI-{00000}</displayFormat>
        <label>Time Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>